<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_name_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:imeOptions="actionNext"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/password"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="?colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:imeOptions="actionSend"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:id="@+id/btn_copy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:background="@drawable/bg_button_login"
                android:text="@string/copy"/>

        <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:background="@drawable/bg_button_login"
                android:text="@string/login"/>
    </LinearLayout>

</RelativeLayout>